--- a/SQLInfo.Web/Views/Home/Index.cshtml
+++ b/SQLInfo.Web/Views/Home/Index.cshtml
@@ -3,6 +3,8 @@
     ViewBag.Title = "View";
     Layout = "~/Views/Shared/_BaseLayoutPage.cshtml";
 }
-
+@section header{
+  <script type="text/javascript" src="~/Scripts/jquery.ztree.all-3.5.min.js"></script>
+}
 <h2>View</h2>
 
