--- a/SQLInfo.Web/Views/Shared/_BaseLayoutPage.cshtml
+++ b/SQLInfo.Web/Views/Shared/_BaseLayoutPage.cshtml
@@ -9,6 +9,8 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>_BaseLayoutPage</title>
+    <script type="text/javascript" src="~/Scripts/jquery-1.4.4.min.js"></script>
+    @RenderSection("header",false)
 </head>
 <body>
     <div> 
