--- a/SQLInfo.Web/Views/Home/Index.cshtml
+++ b/SQLInfo.Web/Views/Home/Index.cshtml
@@ -4,7 +4,8 @@
     Layout = "~/Views/Shared/_BaseLayoutPage.cshtml";
 }
 @section header{
-  <script type="text/javascript" src="~/Scripts/jquery.ztree.all-3.5.min.js"></script>
+    <script type="text/javascript" src="~/Scripts/jquery.ztree.core-3.5.min.js"></script>
+    <script type="text/javascript" src="~/Scripts/jquery.ztree.all-3.5.min.js"></script>
 }
 <h2>View</h2>
 
