--- a/SQLInfo.Web/Views/Home/Index.cshtml
+++ b/SQLInfo.Web/Views/Home/Index.cshtml
@@ -12,7 +12,7 @@
             async: {
                 enable: true,
                 url: "/home/GetRoot",
-                autoParam: ["id", "name", "level","rootid"],
+                autoParam: ["id", "name","pname", "level","rootid"],
                 otherParam: { "otherParam": "zTreeAsyncTest" },
                 dataFilter: filter
             },
@@ -30,48 +30,58 @@
         }
 
         function nodeClick(event, treeId, treeNode, clickFlag) {
-            //alert(treeNode.parentNode[0].name);
+            //alert(treeNode.getParentNode().name);
+            //alert("rootid:" + treeNode.rootid + ",pname:" + treeNode.getParentNode().name+",node:"+treeNode.name);
+            var data = { serverid: treeNode.rootid, dbname: treeNode.getParentNode().name, tableName: treeNode.name };
+            $.ajax({
+                url: '/home/TableDetail',
+                type: 'post',
+                data: data,
+                dataType: 'html',
+                success: function (data) {
+                    
+                    $("#divDetail").html(data);
+                }
+            });
         }
 
-        var zNodes = [
-			{ id: 1, pId: 0, name: "父节点1 - 展开", open: true },
-			{ id: 11, pId: 1, name: "父节点11 - 折叠" },
-			{ id: 111, pId: 11, name: "叶子节点111" },
-			{ id: 112, pId: 11, name: "叶子节点112" },
-			{ id: 113, pId: 11, name: "叶子节点113" },
-			{ id: 114, pId: 11, name: "叶子节点114" },
-			{ id: 12, pId: 1, name: "父节点12 - 折叠" },
-			{ id: 121, pId: 12, name: "叶子节点121" },
-			{ id: 122, pId: 12, name: "叶子节点122" },
-			{ id: 123, pId: 12, name: "叶子节点123" },
-			{ id: 124, pId: 12, name: "叶子节点124" },
-			{ id: 13, pId: 1, name: "父节点13 - 没有子节点", isParent: true },
-			{ id: 2, pId: 0, name: "父节点2 - 折叠" },
-			{ id: 21, pId: 2, name: "父节点21 - 展开", open: true },
-			{ id: 211, pId: 21, name: "叶子节点211" },
-			{ id: 212, pId: 21, name: "叶子节点212" },
-			{ id: 213, pId: 21, name: "叶子节点213" },
-			{ id: 214, pId: 21, name: "叶子节点214" },
-			{ id: 22, pId: 2, name: "父节点22 - 折叠" },
-			{ id: 221, pId: 22, name: "叶子节点221" },
-			{ id: 222, pId: 22, name: "叶子节点222" },
-			{ id: 223, pId: 22, name: "叶子节点223" },
-			{ id: 224, pId: 22, name: "叶子节点224" },
-			{ id: 23, pId: 2, name: "父节点23 - 折叠" },
-			{ id: 231, pId: 23, name: "叶子节点231" },
-			{ id: 232, pId: 23, name: "叶子节点232" },
-			{ id: 233, pId: 23, name: "叶子节点233" },
-			{ id: 234, pId: 23, name: "叶子节点234" },
-			{ id: 3, pId: 0, name: "父节点3 - 没有子节点", isParent: true }
-        ];
+        
 
         $(document).ready(function () {
             $.fn.zTree.init($("#treeDemo"), setting);
         });
     </script>
+<style type="text/css">
+    table.gridtable {
+        font-family: verdana,arial,sans-serif;
+        font-size: 11px;
+        color: #333333;
+        border-width: 1px;
+        border-color: #666666;
+        border-collapse: collapse;
+    }
+
+        table.gridtable th {
+            border-width: 1px;
+            padding: 8px;
+            border-style: solid;
+            border-color: #666666;
+            background-color: #dedede;
+        }
+
+        table.gridtable td {
+            border-width: 1px;
+            padding: 8px;
+            border-style: solid;
+            border-color: #666666;
+            background-color: #ffffff;
+        }
+</style>
 }
 
-<div class="zTreeDemoBackground left">
+<div class="zTreeDemoBackground left" style="float:left;width:240px;border-right:1px solid blue;">
     <ul id="treeDemo" class="ztree"></ul>
+    
 </div>
+<div id="divDetail" style="float:left;margin-left:10px;"></div>
 
