--- a/SQLInfo.Web/Views/Home/Index.cshtml
+++ b/SQLInfo.Web/Views/Home/Index.cshtml
@@ -79,9 +79,9 @@
 </style>
 }
 
-<div class="zTreeDemoBackground left" style="float:left;width:240px;border-right:1px solid blue;">
+<div class="zTreeDemoBackground left" style="float:left;width:340px;border-right:1px solid blue;">
     <ul id="treeDemo" class="ztree"></ul>
     
 </div>
-<div id="divDetail" style="float:left;margin-left:10px;"></div>
+<div id="divDetail" style="float:left;margin-left:10px;margin-bottom:10px;"></div>
 
