--- a/SQLInfo.Web/Styles/styles.css
+++ b/SQLInfo.Web/Styles/styles.css
@@ -22,3 +22,7 @@
             border-color: #666666;
             background-color: #ffffff;
         }
+
+        table.gridtable tr:hover td{
+            background-color:gainsboro;
+        }
