--- a/SQLInfo.Web/Views/Home/Login.cshtml
+++ b/SQLInfo.Web/Views/Home/Login.cshtml
@@ -1,9 +1,9 @@
 ﻿@{
-    ViewBag.Title = "Login";
+    ViewBag.Title = "管理员登录";
     Layout = "~/Views/Shared/_BaseLayoutPage.cshtml";
 }
 @model SQLInfo.Web.Models.UserLoginModel
-<h2>Login</h2>
+<h2>管理员登录</h2>
 @using (Html.BeginForm("Login", "Home", FormMethod.Post))
 {
     <table>
