--- a/SQLInfo.Web/Views/Admin/AdminIndex.cshtml
+++ b/SQLInfo.Web/Views/Admin/AdminIndex.cshtml
@@ -7,7 +7,7 @@
 @section header{
    <script type="text/javascript">
        function addDbServer() {
-           window.showModalDialog("/home/addserver");
+           window.showModalDialog("/admin/addserver");
        }
 
        function deleteDbServer(id) {
