--- a/SQLInfo.Web/Views/Home/Index.cshtml
+++ b/SQLInfo.Web/Views/Home/Index.cshtml
@@ -55,8 +55,8 @@
     
 </style>
 }
-<div style="border-bottom:1px solid blue;height:80px;">
-    <h1 style="float:left;width:300px;">SQLInfo</h1>
+<div style="border-bottom:1px solid blue;height:50px;">
+    <h1 style="float:left;width:300px;margin:0;">SQLInfo</h1>
     <span style="float:right;">
         <a href="/home/login" target="_self">登录</a>
     </span>
