--- a/SQLInfo.Web/Views/Admin/AdminIndex.cshtml
+++ b/SQLInfo.Web/Views/Admin/AdminIndex.cshtml
@@ -34,7 +34,7 @@
     {
         <tr>
             <td>@s.Server</td>
-            <td>@s.DbType</td>
+            <td>@SQLInfo.Common.DbTypeHelper.GetDbTypeName(s.DbType)</td>
             <td>@s.Admin</td>
             <td>******</td>
             <td>
