--- a/SQLInfo.Web/Views/Admin/AdminIndex.cshtml
+++ b/SQLInfo.Web/Views/Admin/AdminIndex.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "AdminIndex";
+    ViewBag.Title = "SQLServer数据库查看器_过客";
     Layout = "~/Views/Shared/_BaseLayoutPage.cshtml";
 }
 @model List<T_Database>
