--- a/SQLInfo.Web/Views/Home/Index.cshtml
+++ b/SQLInfo.Web/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "View";
+    ViewBag.Title = "SQLServer数据库查看器_过客";
     Layout = "~/Views/Shared/_BaseLayoutPage.cshtml";
 }
 @section header{
