--- a/SQLInfo.Web/Views/Home/TableDetail.cshtml
+++ b/SQLInfo.Web/Views/Home/TableDetail.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     ViewBag.Title = "TableDetail";
-    Layout = "~/Views/Shared/_BaseLayoutPage.cshtml";
+    Layout = null;
 }
 @model List<SQLInfo.ViewModel.TableDetail>
 <h2>@ViewBag.DbName.@ViewBag.TableName</h2>
