--- a/SQLInfo.Web/Views/Shared/_BaseLayoutPage.cshtml
+++ b/SQLInfo.Web/Views/Shared/_BaseLayoutPage.cshtml
@@ -8,14 +8,18 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>_BaseLayoutPage</title>
+    <title>SQLServer数据库查看器_过客</title>
     <link type="text/css" rel="stylesheet" href="~/Styles/styles.css" />
     <script type="text/javascript" src="~/Scripts/jquery-1.4.4.min.js"></script>
+    
     @RenderSection("header",false)
 </head>
 <body>
+    
     <div> 
         @RenderBody()
     </div>
+    
+    
 </body>
 </html>
